--- a/index.html
+++ b/index.html
@@ -10,32 +10,43 @@
 
 <body>
     <header>
-        <h1 id="logo">dev.finance$</h1>
+        <img src="./assets/logo.svg" alt="Logo do Dev Finance">
     </header>
     <main class="container">
         <section id="balance">
-            <h2>Balanço</h2>
+            <h2 class="sr-only">Balanço</h2>
             <div class="card">
-                <h3>Entradas</h3>
+                <h3>
+                    <span>Entradas</span>
+                    <img src="./assets/income.svg" alt="Imagem de entradas">
+                </h3>
                 <p>R$ 5.000,00</p>
             </div>
             <div class="card">
-                <h3>Saídas</h3>
+                <h3>
+                    <span>Saídas</span>
+                    <img src="./assets/expense.svg" alt="">
+                </h3>
                 <p>R$ 2.000,00</p>
             </div>
             <div class="card total">
-                <h3>Total</h3>
+                <h3>
+                    <span>Total</span>
+                    <img src="./assets/total.svg" alt="">
+                </h3>
                 <p>R$ 3.000,00</p>
             </div>
         </section>
         <section id="transaction">
-            <h2>Transações</h2>
+            <h2 class="sr-only">Transações</h2>
+            <a href="#" class="button new" onclick="Modal.open()">+ Nova Transação</a>
             <table id="data-table">
                 <thead>
                     <tr>
                         <th>Descrição</th>
                         <th>Valor</th>
                         <th>Data</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -43,26 +54,72 @@
                         <td class="description">Luz</td>
                         <td class="expense">R$ 500,00</td>
                         <td class="date">23/01/2020</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover essa transação">
+                        </td>
                     </tr>
                     <tr>
                         <td class="description">Criação Web</td>
                         <td class="income">R$ 5.000,00</td>
                         <td class="date">23/01/2020</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover essa transação">
+                        </td>
                     </tr>
                     <tr>
                         <td class="description">Internet</td>
                         <td class="expense">R$ 200,00</td>
                         <td class="date">23/01/2020</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover essa transação">
+                        </td>
                     </tr>
                 </tbody>
             </table>
         </section>
-
-
     </main>
+    <div class="modal-overlay   ">
+        <div class="modal">
+            <div id="form">
+                <h2>Nova Transação</h2>
+                <form action="">
+                    <div class="input-group">
+                        <label class="sr-only" for="description">Descrição</label>
+                        <input type="text" name="description" id="description" placeholder="Descrição" />
+                    </div>
+                    <div class="input-group">
+                        <label class="sr-only" for="amount">Valor</label>
+                        <input type="number" step="0.01" name="amount" id="amount" placeholder="0,00" />
+                        <small class="help">Use o sinal , (vírgula) para as casas decimais</small>
+                    </div>
+                    <div class="input-group">
+                        <label class="sr-only" for="date">Data</label>
+                        <input type="date" step="0.01" name="date" id="date" />
+                    </div>
+                    <div class="input-group actions">
+                        <a href="" class="button cancel" onclick="Modal.close()">Cancelar</a>
+                        <button>Salvar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <footer>
-        dev.finance$
+        <p>dev.finance$</p>
     </footer>
+
+    <script>
+        const Modal = {
+            open() {
+                document.querySelector('.modal-overlay')
+                    .classList.add('active');
+            },
+            close() {
+                document.querySelector('.modal-overlay')
+                    .classList.remove('active');
+            }
+        }
+    </script>
 </body>
 
 </html>
