--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>dev.finance$</title>
 </head>
 
 <body>
     <header>
-        <img src="./assets/logo.svg" alt="Logo do Dev Finance">
+        <img src="./assets/img/logo.svg" alt="Logo do Dev Finance">
     </header>
     <main class="container">
         <section id="balance">
@@ -18,23 +18,23 @@
             <div class="card">
                 <h3>
                     <span>Entradas</span>
-                    <img src="./assets/income.svg" alt="Imagem de entradas">
+                    <img src="./assets/img/income.svg" alt="Imagem de entradas">
                 </h3>
-                <p>R$ 5.000,00</p>
+                <p id="incomeDisplay">R$ 0,00</p>
             </div>
             <div class="card">
                 <h3>
                     <span>Saídas</span>
-                    <img src="./assets/expense.svg" alt="">
+                    <img src="./assets/img/expense.svg" alt="">
                 </h3>
-                <p>R$ 2.000,00</p>
+                <p id="expenseDisplay">R$ 0,00</p>
             </div>
             <div class="card total">
                 <h3>
                     <span>Total</span>
-                    <img src="./assets/total.svg" alt="">
+                    <img src="./assets/img/total.svg" alt="">
                 </h3>
-                <p>R$ 3.000,00</p>
+                <p id="totalDisplay">R$ 0,00</p>
             </div>
         </section>
         <section id="transaction">
@@ -50,39 +50,15 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td class="description">Luz</td>
-                        <td class="expense">R$ 500,00</td>
-                        <td class="date">23/01/2020</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover essa transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Criação Web</td>
-                        <td class="income">R$ 5.000,00</td>
-                        <td class="date">23/01/2020</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover essa transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Internet</td>
-                        <td class="expense">R$ 200,00</td>
-                        <td class="date">23/01/2020</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover essa transação">
-                        </td>
-                    </tr>
                 </tbody>
             </table>
         </section>
     </main>
-    <div class="modal-overlay   ">
+    <div class="modal-overlay">
         <div class="modal">
             <div id="form">
                 <h2>Nova Transação</h2>
-                <form action="">
+                <form action="" onsubmit="Form.submit(event)">
                     <div class="input-group">
                         <label class="sr-only" for="description">Descrição</label>
                         <input type="text" name="description" id="description" placeholder="Descrição" />
@@ -90,7 +66,7 @@
                     <div class="input-group">
                         <label class="sr-only" for="amount">Valor</label>
                         <input type="number" step="0.01" name="amount" id="amount" placeholder="0,00" />
-                        <small class="help">Use o sinal , (vírgula) para as casas decimais</small>
+                        <small class="help">Use o sinal - (negativo) para registrar gastros e o sinal , (vírgula) para as casas decimais</small>
                     </div>
                     <div class="input-group">
                         <label class="sr-only" for="date">Data</label>
@@ -108,18 +84,7 @@
         <p>dev.finance$</p>
     </footer>
 
-    <script>
-        const Modal = {
-            open() {
-                document.querySelector('.modal-overlay')
-                    .classList.add('active');
-            },
-            close() {
-                document.querySelector('.modal-overlay')
-                    .classList.remove('active');
-            }
-        }
-    </script>
+    <script src="./assets/app.js"></script>
 </body>
 
 </html>
